--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'kids' do
 
   pod 'react-native-camera', :path => '../node_modules/react-native-camera'
 
+  pod 'RNSha256', :path => '../node_modules/react-native-sha256'
+
   target 'kidsTests' do
     inherit! :complete
     # Pods for testing
