--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.20.0",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-native": "0.63.2",
@@ -23,12 +24,13 @@
     "react-native-camera": "^3.38.0",
     "react-native-fast-image": "^8.3.2",
     "react-native-gesture-handler": "^1.7.0",
-    "react-native-paper": "^4.0.1",
+    "react-native-paper": "^4.1.0",
     "react-native-photo-browser": "^0.7.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^2.10.1"
+    "react-native-screens": "^2.10.1",
+    "react-native-sha256": "^1.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
