--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
+    "getstream": "^6.1.2",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-native": "0.63.2",
