added profile image

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-native": "0.63.2",
     "react-native-activity-feed": "^0.9.1",
     "react-native-camera": "^2.5.0",
+    "react-native-elements": "^2.3.2",
     "react-native-fast-image": "^8.3.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-image-picker": "^2.3.3",
     "react-native-linkedin": "^2.1.1",
     "react-native-paper": "^4.1.0",
     "react-native-photo-browser": "^0.7.0",
