--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/dynamic-links": "^7.5.4",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/material-bottom-tabs": "^5.2.17",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
@@ -28,6 +29,7 @@
     "react-native-activity-feed": "^0.9.1",
     "react-native-aws3": "0.0.9",
     "react-native-camera": "^2.5.0",
+    "react-native-curved-bottom-tabbar": "0.0.3",
     "react-native-dotenv": "^2.4.0",
     "react-native-elements": "^2.3.2",
     "react-native-fast-image": "^8.3.2",
