--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "react-native-dotenv": "^2.4.0",
     "react-native-elements": "^2.3.2",
     "react-native-fast-image": "^8.3.2",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-crop-picker": "^0.34.1",
     "react-native-image-crop-tools": "^1.3.4",
     "react-native-image-picker": "^2.3.3",
     "react-native-image-slider-box": "^1.0.12",
+    "react-native-image-to-pdf": "^1.2.0",
     "react-native-image-viewing": "^0.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-linkedin": "^2.1.1",
