--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.63.2",
     "react-native-actionsheet": "^2.4.2",
     "react-native-activity-feed": "^0.9.1",
+    "react-native-animated-splash-screen": "^2.0.5",
     "react-native-aws3": "0.0.9",
     "react-native-camera": "^2.5.0",
     "react-native-curved-bottom-tabbar": "0.0.3",
