added notifications and removed video

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,8 @@ target 'kids' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'kidsTests' do
     inherit! :complete
     # Pods for testing
