--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.4.3",
     "@react-native-firebase/dynamic-links": "^7.5.4",
+    "@react-native-firebase/messaging": "^7.8.6",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/material-bottom-tabs": "^5.2.17",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@segment/analytics-react-native": "^1.3.1",
+    "awesome-react-native-video-controls": "^1.0.7",
     "axios": "^0.20.0",
     "curved-bottom-navigation-bar": "^1.0.6",
     "getstream": "^6.1.2",
@@ -58,6 +61,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-swipe-up-down": "^1.0.7",
     "react-native-video": "^5.1.0-alpha8",
+    "react-native-video-controls": "^2.6.0",
     "react-native-webview": "^8.0.0"
   },
   "devDependencies": {
