--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-sha256": "^1.3.6",
     "react-native-simple-animations": "^0.2.2",
     "react-native-spinner-button": "^1.0.3",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-video-controls": "^2.6.0",
