--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-image-crop-tools": "^1.3.4",
     "react-native-image-marker": "^0.6.1",
     "react-native-image-picker": "^2.3.3",
+    "react-native-image-slider-box": "^1.0.12",
     "react-native-image-to-pdf": "^1.2.0",
     "react-native-image-viewing": "^0.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
