--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@flyerhq/react-native-link-preview": "^1.0.5",
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/cameraroll": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.10",
@@ -22,6 +23,9 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@segment/analytics-react-native": "^1.3.1",
+    "appcenter": "3.1.2",
+    "appcenter-analytics": "3.1.2",
+    "appcenter-crashes": "3.1.2",
     "awesome-react-native-video-controls": "^1.0.7",
     "axios": "^0.20.0",
     "curved-bottom-navigation-bar": "^1.0.6",
@@ -42,6 +46,7 @@
     "react-native-dotenv": "^2.4.0",
     "react-native-draggable": "^3.3.0",
     "react-native-elements": "^2.3.2",
+    "react-native-emoji-board": "^1.2.1",
     "react-native-fast-image": "^8.3.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
