--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-linkedin": "^2.1.1",
+    "react-native-moengage": "^6.1.1",
+    "react-native-notifier": "^1.3.2",
     "react-native-paper": "^4.1.0",
     "react-native-photo-browser": "^0.7.0",
     "react-native-reanimated": "^1.13.0",
