--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-linkedin": "^2.1.1",
     "react-native-moengage": "^6.1.1",
     "react-native-notifier": "^1.3.2",
+    "react-native-onesignal": "^3.9.2",
     "react-native-paper": "^4.1.0",
     "react-native-photo-browser": "^0.7.0",
     "react-native-reanimated": "^1.13.0",
