--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-native-image-viewing": "^0.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-linkedin": "^2.1.1",
+    // "react-native-linkedin": "^2.1.1",
     "react-native-moengage": "^6.1.1",
     "react-native-notifier": "^1.3.2",
     "react-native-onesignal": "^3.9.2",
