--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "react-native-image-viewing": "^0.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-linkedin": "^2.1.1",
     "react-native-moengage": "^6.1.1",
     "react-native-notifier": "^1.3.2",
     "react-native-onesignal": "^3.9.2",
@@ -82,8 +81,9 @@
     "react-native-video": "^5.1.0-alpha8",
     "react-native-video-controls": "^2.6.0",
     "react-native-view-shot": "^3.1.2",
-    "react-native-webview": "^8.0.0",
+    "react-native-webview": "^11.0.0",
     "react-native-youtube": "^2.0.1",
+    "react-native-youtube-iframe": "^1.4.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "switch-button-react-native": "^1.0.3"
   },
