--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "getstream": "^6.1.2",
     "jetifier": "^1.6.6",
     "native-base": "^2.13.14",
+    "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-actionsheet": "^2.4.2",
@@ -78,6 +79,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-unimodules": "^0.11.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-video-controls": "^2.6.0",
     "react-native-view-shot": "^3.1.2",
