--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/material-bottom-tabs": "^5.2.17",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@reduxjs/toolkit": "^1.5.0",
     "@segment/analytics-react-native": "^1.3.1",
     "appcenter": "3.1.2",
     "appcenter-analytics": "3.1.2",
@@ -91,8 +92,12 @@
     "react-native-webview": "^11.0.0",
     "react-native-youtube": "^2.0.1",
     "react-native-youtube-iframe": "^1.4.0",
+    "react-redux": "^7.2.2",
     "react-use-websocket": "^2.2.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^3.0.3",
     "switch-button-react-native": "^1.0.3"
   },
