--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-fast-image": "^8.3.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-haptic-feedback": "^1.11.0",
     "react-native-image-crop-picker": "^0.34.1",
     "react-native-image-crop-tools": "^1.3.4",
     "react-native-image-marker": "^0.6.1",
