--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native": "0.63.2",
     "react-native-actionsheet": "^2.4.2",
     "react-native-activity-feed": "^0.9.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-aws3": "0.0.9",
