--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "appcenter": "3.1.2",
     "appcenter-analytics": "3.1.2",
     "appcenter-crashes": "3.1.2",
-    "awesome-react-native-video-controls": "^1.0.7",
     "axios": "^0.20.0",
     "clevertap-react-native": "^0.5.0",
     "curved-bottom-navigation-bar": "^1.0.6",
@@ -54,6 +53,7 @@
     "react-native-elements": "^2.3.2",
     "react-native-email": "^1.1.0",
     "react-native-emoji-board": "^1.2.1",
+    "react-native-exoplayer": "github:ngager-group/react-native-exoplayer",
     "react-native-fast-image": "^8.3.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
@@ -87,8 +87,6 @@
     "react-native-thumbnail-video": "^0.1.2",
     "react-native-unimodules": "^0.11.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-video": "^5.1.0-alpha8",
-    "react-native-video-controls": "^2.7.1",
     "react-native-view-shot": "^3.1.2",
     "react-native-websocket": "^1.0.2",
     "react-native-webview": "^11.0.0",
