--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@react-navigation/stack": "^5.9.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@segment/analytics-react-native": "^1.3.1",
+    "@skele/components": "^1.0.0-alpha.40",
     "appcenter": "3.1.2",
     "appcenter-analytics": "3.1.2",
     "appcenter-crashes": "3.1.2",
     "axios": "^0.20.0",
     "clevertap-react-native": "^0.5.0",
     "curved-bottom-navigation-bar": "^1.0.6",
+    "expo-av": "^9.0.0",
     "expo-constants": "^9.2.0",
     "getstream": "^6.1.2",
     "jetifier": "^1.6.6",
@@ -54,7 +56,6 @@
     "react-native-elements": "^2.3.2",
     "react-native-email": "^1.1.0",
     "react-native-emoji-board": "^1.2.1",
-    "react-native-exoplayer": "github:ngager-group/react-native-exoplayer",
     "react-native-fast-image": "^8.3.4",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
