fixed video play

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "reverse": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
+    "@coffeebeanslabs/react-native-inviewport": "^0.2.0",
+    "@expo/vector-icons": "^12.0.3",
     "@flyerhq/react-native-link-preview": "^1.0.5",
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/cameraroll": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.10",
+    "@react-native-community/slider": "^3.0.3",
     "@react-native-firebase/app": "^8.4.3",
     "@react-native-firebase/dynamic-links": "^7.5.4",
     "@react-native-firebase/messaging": "^7.9.0",
@@ -32,8 +36,11 @@
     "axios": "^0.20.0",
     "clevertap-react-native": "^0.5.0",
     "curved-bottom-navigation-bar": "^1.0.6",
+    "expo-asset": "^8.2.2",
     "expo-av": "^9.0.0",
     "expo-constants": "^9.2.0",
+    "expo-font": "^9.0.0",
+    "expo-video-player": "^1.6.1",
     "getstream": "^6.1.2",
     "jetifier": "^1.6.6",
     "native-base": "^2.13.14",
