--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-native-phone-number-input": "^2.0.0",
     "react-native-photo-browser": "^0.3.1",
     "react-native-push-notification": "^7.2.0",
+    "react-native-read-more-text": "^1.1.2",
     "react-native-reanimated": "^1.13.0",
     "react-native-rss-parser": "^1.5.1",
     "react-native-s3-upload": "0.0.12",
