--- a/package.json
+++ b/package.json
@@ -25,13 +25,11 @@
     "@react-native-firebase/messaging": "^7.9.0",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/drawer": "^5.9.0",
-    "@react-navigation/material-bottom-tabs": "^5.2.17",
     "@react-navigation/material-top-tabs": "^5.3.14",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@segment/analytics-react-native": "^1.3.1",
-    "@skele/components": "^1.0.0-alpha.40",
     "appcenter": "3.1.2",
     "appcenter-analytics": "3.1.2",
     "appcenter-crashes": "3.1.2",
@@ -39,8 +37,6 @@
     "clevertap-react-native": "^0.5.0",
     "expo-asset": "^8.2.2",
     "expo-constants": "^10.0.1",
-    "expo-font": "^9.0.0",
-    "getstream": "^7.2.3",
     "jetifier": "^1.6.6",
     "native-base": "^2.13.14",
     "ramda": "^0.27.1",
@@ -56,7 +52,6 @@
     "react-native-code-push": "^6.4.0",
     "react-native-confirmation-code-field": "^6.5.1",
     "react-native-countdown-component": "^2.7.1",
-    "react-native-curved-bottom-tabbar": "0.0.3",
     "react-native-device-info": "^7.0.2",
     "react-native-dotenv": "^2.4.0",
     "react-native-draggable": "^3.3.0",
@@ -88,8 +83,6 @@
     "react-native-push-notification": "^7.2.0",
     "react-native-read-more-text": "^1.1.2",
     "react-native-reanimated": "^1.13.0",
-    "react-native-rss-parser": "^1.5.1",
-    "react-native-s3-upload": "0.0.12",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.10.1",
@@ -101,16 +94,11 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^3.0.0",
-    "react-native-thumbnail-video": "^0.1.2",
-    "react-native-true-sight": "^2.0.0",
     "react-native-unimodules": "^0.12.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.1",
-    "react-native-video-player": "^0.10.1",
     "react-native-view-shot": "^3.1.2",
-    "react-native-websocket": "^1.0.2",
     "react-native-webview": "^11.0.0",
-    "react-native-youtube": "^2.0.1",
     "react-native-youtube-iframe": "^1.4.0",
     "react-redux": "^7.2.2",
     "react-use-websocket": "^2.2.0",
@@ -118,8 +106,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "rn-keyboard-sticky-view": "^1.0.4",
-    "with-default-props": "^0.2.1"
+    "rn-keyboard-sticky-view": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
