--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^0.21.1",
     "clevertap-react-native": "^0.5.0",
     "expo-asset": "^8.2.2",
+    "expo-av": "^9.0.0",
     "expo-constants": "^10.0.1",
     "jetifier": "^1.6.6",
     "native-base": "^2.13.14",
@@ -107,7 +108,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "rn-keyboard-sticky-view": "^1.0.4"
+    "rn-keyboard-sticky-view": "^1.0.4",
+    "with-default-props": "^0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
