--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -34,7 +34,7 @@ MYAPP_UPLOAD_KEY_PASSWORD=genio123
 
 org.gradle.daemon=true
 org.gradle.parallel=true
-org.gradle.configureondemand=true
+# org.gradle.configureondemand=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
