changed profile ui

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-draggable": "^3.3.0",
     "react-native-elements": "^2.3.2",
     "react-native-fast-image": "^8.3.4",
+    "react-native-fbsdk-next": "^4.0.0",
     "react-native-file-viewer": "^2.1.4",
     "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "^1.7.0",
@@ -95,6 +96,7 @@
     "react-native-spinner-button": "^1.0.3",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
+    "react-native-swipe-action-list": "^0.0.6",
     "react-native-tab-view": "^3.0.0",
     "react-native-unimodules": "^0.12.0",
     "react-native-vector-icons": "^7.1.0",
