--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-aws3": "0.0.9",
+    "react-native-button-spinner": "^0.1.4",
     "react-native-camera": "^2.5.0",
     "react-native-code-push": "^6.4.0",
     "react-native-confirmation-code-field": "^6.5.1",
